<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="4dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/date"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="4dp"
        android:paddingTop="8dp"
        android:text="@string/month"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/hour"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintStart_toEndOf="@+id/year"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/minute"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintStart_toEndOf="@+id/hour"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="4dp"
        android:paddingTop="8dp"
        android:text="@string/year"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintStart_toEndOf="@+id/month"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingBottom="16dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/zero_distance"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/zero_duration"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sessionTypeImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/distance"
        app:layout_constraintTop_toBottomOf="@+id/duration" />

</android.support.constraint.ConstraintLayout>
