<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mdp.cw4.runningtracker.activities.RunningTracker">

    <TextView
        android:id="@+id/duration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/duration"
        android:textAlignment="center"
        android:textSize="@dimen/sessionLabels"
        app:layout_constraintBottom_toTopOf="@+id/sessionDuration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/currentPace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/pace"
        android:textAlignment="center"
        android:textSize="@dimen/sessionLabels"
        app:layout_constraintBottom_toTopOf="@+id/pace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/distance"
        android:textAlignment="center"
        android:textSize="@dimen/sessionLabels"
        app:layout_constraintBottom_toTopOf="@+id/distanceTravelled"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sessionDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:freezesText="true"
        android:text="@string/zero_duration"
        android:textAlignment="center"
        android:textSize="@dimen/sessionsValues"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/distanceTravelled"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/zero_distance"
        android:freezesText="true"
        android:textAlignment="center"
        android:textSize="@dimen/sessionsValues"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/actionButtonContainer"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:text="@string/zero_pace"
        android:freezesText="true"
        android:textAlignment="center"
        android:textSize="@dimen/sessionsValues"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/actionButtonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <LinearLayout
        android:id="@+id/actionButtonContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/workoutDropdownContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/workoutTypeDropdown"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/workoutDropdown"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/workoutTypes" />
        </LinearLayout>

        <Button
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/startButton"
            android:onClick="startNewWorkoutSession"
            android:text="@string/start"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/enableGPS"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/running"
            android:onClick="openLocationSettings"
            android:text="@string/enable_gps"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/stopButton"
            android:onClick="stopSession"
            android:text="@string/stop"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pause"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pauseResumeButton"
            android:onClick="pauseResumeSession"
            android:text="@string/pause"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:layout="@android:layout/simple_gallery_item" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</android.support.constraint.ConstraintLayout>
